--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,11 @@
 	padding-bottom:50px;
 	
 }
+.btn{
+	border-radius:5px;
+	background:red;
+	color:white;
+	border:none;
+	padding:5px 5px;
+	width:80px
+}
